--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,19 @@
+body {
+  background-color: black;
+  color: whitesmoke;
+  position: relative;
+  background: url("/showcase.jpg") no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
 img {
   width: 100%;
 }
 
 .landing {
   position: relative;
-  background: url('./img/showcase.jpg') no-repeat;
+  background: url("./img/showcase.jpg") no-repeat;
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -17,7 +26,7 @@ img {
 }
 
 .dark-overlay {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.9);
   position: absolute;
   top: 0;
   left: 0;
@@ -36,4 +45,60 @@ img {
 
 .form-control::placeholder {
   color: #bbb !important;
+}
+
+/* ------------------------------------------------------------------- */
+a,
+a:hover {
+  color: gold !important;
+  text-decoration: none;
+}
+
+.goldenrod {
+  color: goldenrod;
+}
+
+.bg-dark,
+.card {
+  background-color: goldenrod !important;
+}
+.list-group-item,
+.btn {
+  background-color: goldenrod !important;
+  outline: none;
+  color: black;
+}
+
+.btn-danger {
+  background-color: red !important;
+  color: gold;
+}
+
+.text-info {
+  color: yellow !important;
+  text-shadow: 1px 1px 2px black;
+}
+
+.text-info:hover {
+  color: yellow !important;
+}
+
+.bg-info {
+  background-color: gold !important;
+}
+
+.btn-dark {
+  background-color: gold !important;
+  outline: none;
+  border: none;
+}
+.btn-light {
+  outline: none;
+  border: none;
+  margin: 3px;
+}
+
+.btn {
+  outline: none;
+  border: none;
 }
