--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,13 +6,14 @@ body {
   background-size: cover;
   background-position: center;
   min-height: 100vh;
+  padding-bottom: 100px;
 }
 
 img {
   width: 100%;
 }
 
-.landing {
+/* .landing {
   position: relative;
   background: url("./img/showcase.jpg") no-repeat;
   background-size: cover;
@@ -20,20 +21,20 @@ img {
   height: 100vh;
   margin-top: -24px;
   margin-bottom: -50px;
-}
+} */
 
 .landing-inner {
   padding-top: 80px;
 }
 
-.dark-overlay {
+/* .dark-overlay {
   background-color: rgba(0, 0, 0, 0.9);
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-}
+} */
 
 .card-form {
   opacity: 0.9;
@@ -105,6 +106,7 @@ a:hover {
 }
 
 footer {
+  margin-top: 100px;
   position: absolute;
   right: 0;
   bottom: 0;
